fix: resolve backend quality gate failures